examples/valid/13_existential_structs.lane
struct Hide {
  type T : Type
  val : T
}

fn repack(h : Hide) -> Hide {
  {
    let Hide::{ T, val } = h
    Hide::{ T = T, val: val }
  }
}

let packed_int : Hide = Hide::{ T = Int, val: builtin("%answer") }
let repacked_int : Hide = repack(packed_int)

