examples/invalid/17_existential_struct_missing_witness.lane
// invalid: struct literals must provide every existential type witness
struct Hide {
  type T : Type
  val : T
}

let bad : Hide = Hide::{ val: 1 }

